[package]
name = "signalling-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
axum = "0.7.5"
serde = "1.0.201"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = { version = "1.37.0", features = ["full"] }
