[package]
name = "signalling-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-stream = "0.3.5"
async-trait = "0.1.80"
axum = "0.7.5"
chrono = "0.4.38"
futures = "0.3.30"
serde = "1.0.201"
serde_json = "1.0.117"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
